crates/plotnik-tests/tests/macro_diagnostics/fail/unknown_package.rs
plotnik::query! {
    grammar = "plotnik-no-such-grammar-package",
    "Q = (program)"
}

fn main() {}
